@startuml
'https://plantuml.com/class-diagram

class Utilidades
class ManejadorDeRespuestas
class ManejadorDeMensajes
class ManejadorPalabrasClave

class Megatron {
    - Utilidades utilidades
    - int estado_de_intencion
    ---
    + Megatron()
    + void responder(mensaje : string)
    + void sugerir_fusion()
    + void cambiar_intencion(intencion : string)
}

' Relaciones
Megatron --> Utilidades : "usa"
Megatron --> ManejadorDeMensajes : "depende"
Megatron --> ManejadorPalabrasClave : "depende"
Megatron --> ManejadorDeRespuestas : "depende"


@enduml